documented bot user pre-requisite and initial atlantis docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,5 +14,6 @@ services:
   atlantis:
     image: ghcr.io/runatlantis/atlantis:v0.19.6
     container_name: atlantis
+    env_file: atlantis.env
     environment:
-      - URL=${WEBHOOK_BASE_URL}
+      - ATLANTIS_ATLANTIS_URL=${WEBHOOK_BASE_URL}
